OpenShift-4.1/node-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node
  namespace: poc
spec:
  replicas: 2
#  selector:
#     matchLabels:
#       app: ArtifactStateCluster
  template:
    metadata:
      labels:
        app: ArtifactStateCluster
        tag: clusternode
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: node
        image: image-registry.openshift-image-registry.svc:5000/poc/cluster:latest
        imagePullPolicy: IfNotPresent
        #health
        livenessProbe:
          httpGet:
            path: /alive
            port: akka-mgmt-http
        readinessProbe:
          httpGet:
            path: /ready
            port: akka-mgmt-http
        #health
        ports:
        # akka remoting
        - name: remoting
          containerPort: 2552
          protocol: TCP
        # external http
        - name: akka-mgmt-http
          containerPort: 8558
          protocol: TCP
        - name: node-metrics
          containerPort: 9001

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: node
  namespace: poc
spec:
  type: NodePort
  ports:
  - name: akka-mgmt-http
    protocol: TCP
    port: 8558
    targetPort: akka-mgmt-http
    nodePort: 30558
  selector:
    tag: clusternode
