OpenShift-4.1/endpoint-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: endpoint
  namespace: poc
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ArtifactStateCluster
        tag: endpoint
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - env:
        - name: CASSANDRA_CONTACT_POINT1
          value: cassandra-peers
        - name: CLUSTER_IP
          value: endpoint
        - name: CLUSTER_PORT
          value: "1601"
        - name: SEED_PORT_1600_TCP_ADDR
          value: seed
        - name: JAVA_OPTS
          value: "-Dconfig.resource=endpoint-application-k8s.conf"
        image: image-registry.openshift-image-registry.svc:5000/poc/cluster:latest
        imagePullPolicy: IfNotPresent
        #health
        livenessProbe:
          httpGet:
            path: /alive
            port: akka-mgmt-http
        readinessProbe:
          httpGet:
            path: /ready
            port: akka-mgmt-http
        #health
        name: endpoint
        ports:
        - containerPort: 8082
        # akka remoting
        - name: remoting
          containerPort: 2552
          protocol: TCP
        # external http
        - name: akka-mgmt-http
          containerPort: 8558
          protocol: TCP
        - name: ep-metrics
          containerPort: 9001

        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: endpoint
  namespace: poc
spec:
  type: NodePort
  ports:
  - name: "8082"
    protocol: TCP
    port: 8082
    targetPort: 8082
    nodePort: 30082
  selector:
    tag: endpoint

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: endpoint-route
  namespace: poc
spec:
  port:
    targetPort: '8082'
  to:
    kind: Service
    name: endpoint
    weight: 100
  wildcardPolicy: None
